--- a/src/app/title/title.component.css
+++ b/src/app/title/title.component.css
@@ -4,14 +4,30 @@
     border-radius: 8px;
     box-shadow: 0px 4px 4px rgba(0,0,0,0.2);
     padding: 1em;
-    min-width: 300px;
-    max-width: 100px;
-    max-height: 200px;
+    width: 400px;
+    //min-width: 300px;
+    //max-width: 100px;
+    //max-height: 300px;
     color: rgb(68, 68, 68);
+}
+
+h3 {
+    margin: 0px;
 }
 
 :host-context() {
     background-color: rgb(245, 243, 243);
+}
+
+a {
+    display: inline-block;
+    margin: 1em 0;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.category{
+    display: inline-block;
 }
 
 button {
