--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,11 +1,31 @@
 
-<h1>Curso Angular</h1>
-<h3>Autor: {{ name }}</h3>
+<h1>Información</h1>
 
 <p *ngIf="!isAvailable; else available">Lanzamiento: 25 Dic 2018</p>
 <ng-template #available>
-  <span class="highlight">Curso disponible</span>
+  <span class="highlight">Curso disponible </span>
 </ng-template>
+
+<div class="category" [ngSwitch]="category">
+  <span *ngSwitchCase="'web'">Desarrollo Web</span>
+  <span *ngSwitchCase="'mobile'">Desarrollo Móvil</span>
+  <span *ngSwitchCase="'other'">Desarrollo General</span>
+</div>
+
+<h3>Autor: {{ name }}</h3>
+
+<div>
+  <a>Más información <i class="fa fa-chevron-down" [ngClass]="{'fa-chevron-down': !moreInformation,
+    'fa-chevron-up': moreInformation}"></i></a> 
+  <p *ngIf="moreInformation">
+    Este es un curso de Angular 6 en donde estoy conociendo las bondades
+    del framework de frontend
+  </p>
+</div>
+
+<ul>
+  <li *ngFor="let topic of topics; index as posicion">{{ posicion+1 }}.-{{ topic }}</li>
+</ul>
 
 <div>
   <button [disabled]="!isAvailable" [ngClass]="{active: isAvailable, shadow: !isAvailable}" 
